<?xml version="1.0"?>
<package format="2">
  <name>mocap_csv2bag</name>
  <version>0.0.0</version>
  <description>The mocap csv to bag package</description>
  <maintainer email="info@automodality.com">info</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>genmsg</depend>
  <depend>rosbag</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
